--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  box-sizing: boarder-box;
+}
+html {
+  height: 100%;
+}
+body {
+  font-family: "Roboto", sans-serif;
+  background-color: #1c2228;
+  color: #f7fff7;
+  height: 100%;
+}
+a {
+  color: rgb(94, 94, 211);
+}
+
+a:hover {
+  color: aqua;
+}
+.shadow {
+  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2), 0 5px 6px rgba(0, 0, 0, 0.3);
+}
+.section-container {
+  padding: 30px;
+}
