side bar and logo up

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,5 @@
-<p>navbar works!</p>
+<!-- clickable logo to go back to the home page -->
+<a class="navbar-brand" href="/" style="text-decoration: none">
+  <span class="logo logo-left">Mayo </span>
+  <span class="logo logo-right">Business Board</span>
+</a>
