--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,5 @@
+@import "~bootstrap/dist/css/bootstrap.min.css";
+
 #sideBar {
   height: 100vh;
   padding-top: 80px;
@@ -9,9 +11,12 @@
 }
 
 .navbar {
-  background-color: #161a1e;
+  background-color: #161a1e !important;
+
+  // background-color: #161a1e;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2), 0 3px 6px rgba(0, 0, 0, 0.25);
 }
 p {
+  padding-top: 30vh;
   color: aqua;
 }
