--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -4,7 +4,13 @@
   font-size: 1.4em;
 }
 .logo-left {
-  background-color: rgb(4, 0, 255);
+  background-color: rgb(225, 219, 236);
   padding: 3px 5px 3px 8px;
+  border-radius: 5px;
+  color: #191f26;
+}
+.logo-right {
+  padding: 3px 8px 3px 3px;
+  margin-left: -4px;
   border-radius: 5px;
 }
