--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@ html {
 }
 body {
   font-family: "Roboto", sans-serif;
-  background-color: #1c2228;
+  background-color: #1c2228 !important;
   color: #f7fff7;
   height: 100%;
 }
